# cassandra-yt-mcp

./: .gitignore  .gitmodules  .woodpecker.yaml  CLAUDE.md  README.md
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  Dockerfile.coordinator  Dockerfile.onnx  README.md  pyproject.toml
backend/src/cassandra_yt_mcp/: config.py  downloader_server.py  main.py  mcp_server.py  metrics.py  runtime.py  types.py  worker_server.py
backend/src/cassandra_yt_mcp/api/: app.py
backend/src/cassandra_yt_mcp/db/: database.py  jobs.py  transcripts.py
backend/src/cassandra_yt_mcp/models/: api.py
backend/src/cassandra_yt_mcp/services/: downloader.py  fallback_transcriber.py  fluidaudio_transcriber.py  local_transcriber.py  onnx_transcriber.py  remote_transcriber.py  storage.py  transcriber.py  youtube_info.py
backend/src/cassandra_yt_mcp/utils/: url.py
backend/tests/: test_api.py  test_downloader.py  test_fallback_transcriber.py  test_jobs.py  test_jobs_and_transcripts.py  test_url_utils.py
gpu-worker/: Cargo.toml  Dockerfile
gpu-worker/parakeet-rs/src/: model_tdt.rs
gpu-worker/src/: main.rs  transcribe.rs
infra/: README.md
infra/modules/backend-access/: main.tf  outputs.tf  variables.tf
infra/modules/worker-edge/: main.tf  outputs.tf  variables.tf
worker/: README.md  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts
worker/src/: backend.ts  index.ts  mcp-tools.ts  utils.ts  workers-oauth-utils.ts  workos-handler.ts
worker/src/__tests__/: worker.integration.test.ts
